--- a/env-builder/roles/generate_appregdefs/tasks/render_single_regdef.yaml
+++ b/env-builder/roles/generate_appregdefs/tasks/render_single_regdef.yaml
@@ -1,60 +1,65 @@
----
 # roles/generate_appregdefs/tasks/render_single_regdef.yaml
 
-- name: Ensure tmp_render_dir fact is set
-  set_fact:
-    tmp_render_dir: "{{ tmp_render_dir | default('/tmp') }}"
+- block:
+    # 1) Ensure tmp_render_dir + timestamp (fact / shell fallback)
+    - name: Ensure tmp_render_dir and render_timestamp are set
+      set_fact:
+        tmp_render_dir: "{{ tmp_render_dir | default('/tmp') }}"
+        render_timestamp: >-
+          {{ render_timestamp | default(
+              (ansible_date_time.epoch
+                 if (ansible_date_time is defined and ansible_date_time.epoch is defined)
+                 else lookup('pipe','date +%s')
+              )
+            )
+          }}
 
-- name: Prepare regdefs dict for Jinja context
-  set_fact:
-    regdefs:
-      overrides: "{{ regdefs_overrides }}"
+    # 2) Prepare overrides for Jinja
+    - name: Prepare regdefs dict for Jinja context
+      set_fact:
+        regdefs:
+          overrides: "{{ regdefs_overrides }}"
 
-- name: Load raw RegDef template as YAML
-  slurp:
-    src: "{{ item.path }}"
-  register: regdef_raw_slurp
+    # 3) Compute a stable base name (strip trailing .j2)
+    - name: Extract template_name (basename without .j2)
+      set_fact:
+        template_name: "{{ item.path | basename | regex_replace('\\.j2$','') }}"
 
-- name: Decode raw RegDef template
-  set_fact:
-    regdef_raw: "{{ regdef_raw_slurp.content | b64decode }}"
+    # 4) Render into a timestamped temp file
+    - name: Render RegDef template using Jinja
+      template:
+        src:  "{{ item.path }}"
+        dest: "{{ tmp_render_dir }}/{{ template_name }}.{{ render_timestamp }}.rendered.regdef.yml"
+      vars:
+        current_env: "{{ current_env }}"
+        regdefs:     "{{ regdefs }}"
 
-- name: Extract template basename for Jinja context
-  set_fact:
-    template_name: "{{ item.path | basename | regex_replace('\\.j2$', '') }}"
+    # 5) Read & decode the rendered output
+    - name: Read rendered RegDef into string
+      slurp:
+        src: "{{ tmp_render_dir }}/{{ template_name }}.{{ render_timestamp }}.rendered.regdef.yml"
+      register: regdef_rendered_slurp
 
-- name: Render RegDef to temp file
-  template:
-    src: "{{ item.path }}"
-    dest: "{{ tmp_render_dir }}/{{ template_name }}.{{ render_timestamp }}.rendered.regdef.yml"
-  vars:
-    regdefs: "{{ regdefs }}"
-    current_env: "{{ current_env }}"
+    - name: Decode rendered RegDef content
+      set_fact:
+        regdef_raw_rendered: "{{ regdef_rendered_slurp.content | b64decode }}"
 
-- name: Set rendered RegDef path
-  set_fact:
-    regdef_rendered_path: "{{ tmp_render_dir }}/{{ template_name }}.{{ render_timestamp }}.rendered.regdef.yml"
+    # 6) Parse for the name field
+    - name: Parse rendered RegDef YAML into dict
+      set_fact:
+        regdef_content: "{{ regdef_raw_rendered | from_yaml }}"
 
-- name: Read rendered RegDef into raw string
-  slurp:
-    src: "{{ regdef_rendered_path }}"
-  register: regdef_rendered_slurp
+    # 7) Fail fast if name is missing
+    - name: Ensure RegDef name was parsed
+      assert:
+        that:
+          - regdef_content.name is defined
+          - regdef_content.name | length > 0
+        fail_msg: "Rendered RegDef from {{ item.path }} is missing a name field"
 
-- name: Decode rendered RegDef
-  set_fact:
-    regdef_raw_rendered: "{{ regdef_rendered_slurp.content | b64decode }}"
-
-- name: Parse rendered RegDef YAML into a dict
-  set_fact:
-    regdef_content: "{{ regdef_raw_rendered | from_yaml }}"
-
-- name: Extract name field from RegDef
-  set_fact:
-    regdef_name: "{{ regdef_content.name }}"
-
-- name: Save rendered RegDef to final path
-  copy:
-    content: "{{ regdef_raw_rendered }}"
-    dest: "{{ current_env_dir }}/RegDefs/{{ regdef_name }}.regdef.yml"
-    mode: '0644'
-  when: regdef_name is defined and regdef_name | length > 0
+    # 8) Write out the final file
+    - name: Save final rendered RegDef
+      copy:
+        content: "{{ regdef_raw_rendered }}"
+        dest:    "{{ current_env_dir }}/RegDefs/{{ regdef_content.name }}.regdef.yml"
+        mode:    '0644'
