--- a/build_effective_set_generator_java/Dockerfile
+++ b/build_effective_set_generator_java/Dockerfile
@@ -12,7 +12,7 @@ RUN microdnf install -y curl ca-certificates ${JAVA_PACKAGE} && \
 
 COPY downloaded_artifact/build_effective_set_generator_java/effective-set-generator/target/*.jar /deployments/app.jar
 
-FROM registry.access.redhat.com/ubi8/ubi-micro:8.1
+FROM registry.access.redhat.com/ubi8/ubi-micro
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 
