Updated the namings for workflows

--- a/.github/workflows/docker-build-instance-repo-pipeline.yml
+++ b/.github/workflows/docker-build-instance-repo-pipeline.yml
@@ -1,4 +1,6 @@
-name: Build qubership-instance-repo-pipeline dockerimage
+name: "Dev: Build Qubership Instance Repo pipeline dockerimage"
+
+run-name: "Build Instance Repo pipeline for commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
