--- a/.github/workflows/docker-build-qubership-effective-set-generator.yml
+++ b/.github/workflows/docker-build-qubership-effective-set-generator.yml
@@ -1,6 +1,6 @@
-name: Dev build effective-set-generator dockerimage
+name: "Dev: Build Qubership Effective Set Generator dockerimage"
 
-run-name: "Build effective-set-generator: commit ${{ github.sha }}"
+run-name: "Build effective-set-generator for commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
