--- a/test_data/test_environments/test-solution-structure/cloud-passport/test-solution-structure.yml
+++ b/test_data/test_environments/test-solution-structure/cloud-passport/test-solution-structure.yml
@@ -10,7 +10,7 @@ cloud:
   CLOUD_PRIVATE_HOST: test-host.managed.tmp.cloud
   CLOUD_DASHBOARD_URL: https://dashboard.test-host.managed.tmp.cloud
   CLOUD_PROTOCOL: https
-  PRODUCTION_MODE: "false"
+  PRODUCTION_MODE: false
   GRAYLOG_UI_URL: https://test-host.managed.tmp.cloud
   TRACING_UI_URL: https://test-host.managed.tmp.cloud
   GRAFANA_UI_URL: https://test-host.managed.tmp.cloud
