Fixing the errors

--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Inventory/env_definition.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Inventory/env_definition.yml
@@ -20,8 +20,7 @@ envTemplate:
     bss: ["env-specific-app"]
   envSpecificTechnicalParamsets:
     bss: ["env-specific-tech"]
-  envSpecificE2EParamsets:
-    cloud: ["cloud-level-paramset"]
+  envSpecificE2EParamsets: []
   sharedMasterCredentialFiles:
     - prod-integration-creds
   templateArtifact:
