--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/tenant.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/tenant.yml
@@ -1,4 +1,4 @@
-# The contents of this file is generated from template artifact: qubership_envgene_templates.
+# The contents of this file is generated from template artifact: test-solution-structure.
 # Contents will be overwritten by next generation.
 # Please modify this contents only for development purposes or as workaround.
 name: "test-tenant"
