Fixing the errors

--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Credentials/credentials.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Credentials/credentials.yml
@@ -1,4 +1,4 @@
-cloud-deploy-sa-token:
+cloud-deploy-sa-token: # cloud passport: test-solution-structure version: 1.5
   type: "secret"
   data:
     secret: "test_secret"
@@ -20,3 +20,13 @@ maas:
   data:
     username: "test_username"
     password: "test_password"
+service-activator-integration-cred:
+  type: usernamePassword
+  data:
+    username: 'test_username'
+    password: 'test_password'
+tibco-integration-cred:
+  type: usernamePassword
+  data:
+    username: 'test_username'
+    password: 'test_password'    
