--- a/test_data/test_environments/prod-integration-creds.yml
+++ b/test_data/test_environments/prod-integration-creds.yml
@@ -1,10 +1,10 @@
 service-activator-integration-cred:
   type: usernamePassword
   data:
-    username: 'tmp_username'
-    password: 'tmp_password'
+    username: 'test_username'
+    password: 'test_password'
 tibco-integration-cred:
   type: usernamePassword
   data:
-    username: 'tmp_username'
-    password: 'tmp_password'
+    username: 'test_username'
+    password: 'test_password'
