--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Inventory/env_definition.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Inventory/env_definition.yml
@@ -30,4 +30,4 @@ envTemplate:
       artifact_id: "test-solution-structure"
       version: "0.0.1"
 generatedVersions:
-  generateEnvironmentLatestVersion: "test-01"
+  generateEnvironmentLatestVersion: "test-01"  # This value is automatically generated during job run.
