--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/cloud.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/cloud.yml
@@ -1,15 +1,17 @@
 # The contents of this file is generated from template artifact: test-solution-structure.
 # Contents will be overwritten by next generation.
 # Please modify this contents only for development purposes or as workaround.
-name: "test-solution-structure" # cloud passport: test-solution-structure version: 1.5
+name: "test-solution-structure"
 apiUrl: "tmp.cloud.com" # cloud passport: test-solution-structure version: 1.5
-apiPort: "000" # cloud passport: test-solution-structure version: 1.5
+apiPort: "0000" # cloud passport: test-solution-structure version: 1.5
 privateUrl: "test-host.managed.tmp.cloud" # cloud passport: test-solution-structure version: 1.5
 publicUrl: "test-host.managed.tmp.cloud" # cloud passport: test-solution-structure version: 1.5
 dashboardUrl: "https://dashboard.test-host.managed.tmp.cloud" # cloud passport: test-solution-structure version: 1.5
 labels: []
 defaultCredentialsId: "cloud-deploy-sa-token" # cloud passport: test-solution-structure version: 1.5
+protocol: "https"
 dbMode: "db"
+productionMode: false
 databases: []
 mergeDeployParametersAndE2EParameters: false
 maasConfig:
@@ -33,19 +35,14 @@ consulConfig:
   internalUrl: "http://consul.consul:8888"
 deployParameters:
   CLOUD_DASHBOARD_URL: "https://dashboard.test-host.managed.tmp.cloud" # cloud passport: test-solution-structure version: 1.5
-  ENV_NAME: "e01" # cloud passport: test-solution-structure version: 1.5
+  ENV_NAME: "test-solution-structure-case-01"
   GRAFANA_UI_URL: "https://test-host.managed.tmp.cloud" # cloud passport: test-solution-structure version: 1.5
   GRAYLOG_UI_URL: "https://test-host.managed.tmp.cloud" # cloud passport: test-solution-structure version: 1.5
-  POSTGRES_DBA_PASSWORD: "tmp_password" # cloud passport: test-solution-structure version: 1.5
-  POSTGRES_DBA_USER: "tmp_username" # cloud passport: test-solution-structure version: 1.5
-  PRODUCTION_MODE: false
-  TBAPI_URL: "http://test"
-  TRACING_UI_URL: "https://test-host.managed.tmp.cloud"
-  VALUE: "true"
-  key1: "value2"
+  TRACING_UI_URL: "https://test-host.managed.tmp.cloud" # cloud passport: test-solution-structure version: 1.5
+  VALUE: "true" # cloud passport: test-solution-structure version: 1.5
 e2eParameters:
   INSTANSES_REPO: "https://github.com/Netcracker/qubership-envgene-instance"
-  url: "https://toolset.test-host..managed.tmp.cloud"
+  url: "https://toolset.test-host.managed.tmp.cloud"
 technicalConfigurationParameters: {}
 deployParameterSets: []
 e2eParameterSets: []
