--- a/test_data/test_environments/prod-integration-creds.yml
+++ b/test_data/test_environments/prod-integration-creds.yml
@@ -1,10 +1,10 @@
-service-activator-integration-cred:
+service-activator-integration-cred: # shared credentials: prod-integration-creds
   type: usernamePassword
   data:
-    username: 'test_username'
-    password: 'test_password'
-tibco-integration-cred:
+    username: "test_username"
+    password: "test_password"
+tibco-integration-cred: # shared credentials: prod-integration-creds
   type: usernamePassword
   data:
-    username: 'test_username'
-    password: 'test_password'
+    username: "test_username"
+    password: "test_password"
