--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Credentials/credentials.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Credentials/credentials.yml
@@ -20,13 +20,13 @@ maas:
   data:
     username: "test_username"
     password: "test_password"
-service-activator-integration-cred:
+service-activator-integration-cred:  # shared credentials: prod-integration-creds
   type: usernamePassword
   data:
-    username: 'test_username'
-    password: 'test_password'
-tibco-integration-cred:
+    username: "test_username"
+    password: "test_password"
+tibco-integration-cred:  # shared credentials: prod-integration-creds
   type: usernamePassword
   data:
-    username: 'test_username'
-    password: 'test_password'    
+    username: "test_username"
+    password: "test_password"    
