--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Namespaces/app/namespace.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Namespaces/app/namespace.yml
@@ -13,15 +13,15 @@ profile:
   name: "dev_app"
   baseline: "dev"
 deployParameters:
-  BSS_NAMESPACE: "test-solution-structure-app"
-  CORE_NAMESPACE: "test-solution-structure-core-app"
+  APP_NAMESPACE: "test-solution-structure-app"
+  APP_CORE_NAMESPACE: "test-solution-structure-core-app"
   ENVGENE_CONFIG_REF_NAME: "main"
   ENVGENE_CONFIG_TAG: ""
   test_parameter: "test-solution-structure-app"
 e2eParameters: {}
 technicalConfigurationParameters:
-  BSS_NAMESPACE: "test-solution-structure-app"
-  CORE_NAMESPACE: "test-solution-structure-core-app"
+  APP_NAMESPACE: "test-solution-structure-app"
+  APP_CORE_NAMESPACE: "test-solution-structure-core-app"
 deployParameterSets: []
 e2eParameterSets: []
 technicalConfigurationParameterSets: []
