--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Namespaces/app-core/namespace.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Namespaces/app-core/namespace.yml
@@ -5,24 +5,24 @@ name: "test-solution-structure-core-app"
 credentialsId: ""
 isServerSideMerge: false
 labels:
-  - "test-solution-structure"
-  - "test-solution-structure-tenant"
+  - "solutionInstance-test-solution-structure-case-01"
+  - "solution-test-tenant"
 cleanInstallApprovalRequired: false
 mergeDeployParametersAndE2EParameters: false
 profile:
   name: "dev_core_app"
   baseline: "dev"
 deployParameters:
-  APP_NAMESPACE: "test-solution-structure-app"
-  APP_CORE_NAMESPACE: test-solution-structure-core-app"
-  ENVGENE_CONFIG_REF_NAME: "main"
+  APP_NAMESPACE: "test-solution-structure-case-01-app"
+  APP_CORE_NAMESPACE: "test-solution-structure-case-01-app-core"
+  ENVGENE_CONFIG_REF_NAME: ""
   ENVGENE_CONFIG_TAG: ""
 e2eParameters: {}
 technicalConfigurationParameters:
-  APP_NAMESPACE: "test-solution-structure-app"
-  APP_CORE_NAMESPACE: "test-solution-structure-core-app"
+  APP_NAMESPACE: "test-solution-structure-case-01-app"
+  APP_CORE_NAMESPACE: "test-solution-structure-case-01-app-core"
 deployParameterSets: []
 e2eParameterSets: []
 technicalConfigurationParameterSets: []
-tenantName: "dev"
+tenantName: "test-solution-structure-template"
 
