Fixing the errors

--- a/test_data/test_templates/parameters/app/app-common.yml
+++ b/test_data/test_templates/parameters/app/app-common.yml
@@ -1,4 +1,4 @@
 ---
 name: "app-common"
 parameters:
-  TEST_PARAM_1: '{{ current_env.solution_structure["Test-App-DB-Name"]["app-core"].namespace }}'
+  TEST_PARAM_1: "TEST_VALUE_1"
