--- a/.github/workflows/perform_tests.yml
+++ b/.github/workflows/perform_tests.yml
@@ -71,5 +71,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-environments
-          path: tmp/test_environments/    
+          name: test_artifact
+          path: tmp/  
