--- a/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Namespaces/app-core/namespace.yml
+++ b/test_data/test_environments/test-solution-structure/test-solution-structure-case-01/Namespaces/app-core/namespace.yml
@@ -17,7 +17,7 @@ deployParameters:
   APP_NAMESPACE: "test-solution-structure-case-01-app"
   ENVGENE_CONFIG_REF_NAME: ""
   ENVGENE_CONFIG_TAG: ""
-  TEST_PARAM_1: "TEST_VALUE_1"
+  TEST_PARAM_1: "TEST_VALUE_1" # paramset: app-common version: n/a source: template
 e2eParameters: {}
 technicalConfigurationParameters:
   APP_CORE_NAMESPACE: "test-solution-structure-case-01-app-core"
