Updated names for variables in ansible

--- a/env-builder/roles/generate_solution_structure/tasks/main.yaml
+++ b/env-builder/roles/generate_solution_structure/tasks/main.yaml
@@ -51,7 +51,7 @@
       
     - name: Checking the existence of template descriptor
       stat:
-        path: "{{ templates_dir }}/env_templates/{{ env_template_name }}.{{ item }}"
+        path: "{{ templates_dir }}/env_templates/{{ _template_name }}.{{ item }}"
       loop:
         - yml
         - yaml
