--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -100,8 +100,7 @@
       ansible.builtin.include_role:
         name: generate_solution_structure
       vars:
-        env_template_name: "{{ current_env.env_template }}"
-        env_template_path: "{{ current_env_template.namespaces }}"
+        _template_name: "{{ current_env.env_template }}"
         _tenant: "{{ tenant }}"
         _env: "{{ env }}"
         _cloud: "{{ current_env.cloud }}"
