Updated the position of the task

--- a/env-builder/main.yaml
+++ b/env-builder/main.yaml
@@ -76,6 +76,16 @@
         file: "{{ templates_dir }}/env_templates/{{current_env.env_template}}.yaml"
         name: current_env_template 
 
+    - name: Generate solution_structure variable
+      ansible.builtin.include_role:
+        name: generate_solution_structure
+      vars:
+        _template_name: "{{ current_env.env_template }}"
+        _tenant: "{{ tenant }}"
+        _env: "{{ env }}"
+        _cloud: "{{ current_env.cloud }}"
+        _current_env_dir: "{{ current_env_dir }}"
+    
     - name: Gen tenant
       ansible.builtin.include_role:
         name: generate_tenant
