--- a/.github/workflows/docker-build-qubership-gcip.yml
+++ b/.github/workflows/docker-build-qubership-gcip.yml
@@ -10,6 +10,9 @@ env:
   IMAGE_NAME: netcracker/qubership-gcip
 
 jobs:
+  tests:
+    uses: ./.github/workflows/perform_tests.yml
+  
   build-and-push-image:
     runs-on: ubuntu-latest
     permissions:
