--- a/.github/workflows/perform_tests.yml
+++ b/.github/workflows/perform_tests.yml
@@ -4,6 +4,7 @@ run-name: "Perform smoke tests on commit ${{ github.sha }}"
 
 on:
   workflow_dispatch:
+  workflow_call:
   push:
     branches:
       - '**'
