--- a/.github/workflows/docker_publish_release.yml
+++ b/.github/workflows/docker_publish_release.yml
@@ -30,6 +30,7 @@ jobs:
     uses: ./.github/workflows/perform_tests.yml
   
   check-tag:
+    needs: [tests]
     runs-on: ubuntu-latest
     steps:
       - name: Input parameters
