#156 Adding data to prepare redner

--- a/test_data/test_environments/cluster01/env04/Inventory/env_definition.yml
+++ b/test_data/test_environments/cluster01/env04/Inventory/env_definition.yml
@@ -5,4 +5,7 @@ inventory:
   cloudPassport: "test-cloudPassport" #TC-003-007
   deployer: "test-deployer" #TC-003-011
 envTemplate:
-  name: "test-template-2" #TC-003-017  
+  name: "test-template-2" #TC-003-017
+  additionalTemplateVariables: {} #TC-003-019
+generatedVersions:
+  generateEnvironmentLatestVersion: "test-template-2"  
