--- a/test_data/test_environments/cluster01/env03/Inventory/env_definition.yml
+++ b/test_data/test_environments/cluster01/env03/Inventory/env_definition.yml
@@ -6,5 +6,12 @@ inventory:
   deployer: "test-deployer-without-url" #TC-003-009
   description: "TEST-DESCRIPTION" #TC-003-013 
   owners: "Qubership.org" #TC-003-015
+  cloudPassport: "test-cloud-passport" #TC-003-020
 envTemplate:
   name: "test-template-1" #TC-003-017
+  additionalTemplateVariables:
+    Variable_1: "Value 1"
+    Variable_2: "Value 2"
+    Variable_3: "Value 3"
+generatedVersions:
+  generateEnvironmentLatestVersion: "test-template-1"
