--- a/test_data/test_environments/cluster01/env03/cloud.yml
+++ b/test_data/test_environments/cluster01/env03/cloud.yml
@@ -9,7 +9,28 @@ publicUrl: "test-host.managed.tmp.cloud" # cloud passport: test-cloud-passport v
 dashboardUrl: "https://dashboard.test-host.managed.tmp.cloud" # cloud passport: test-cloud-passport version: 1.5
 defaultCredentialsId: "cloud-deploy-sa-token" # cloud passport: test-cloud-passport version: 1.5
 protocol: "https" # cloud passport: test-cloud-passport version: 1.5
+dbMode: "db"
 productionMode: false # cloud passport: test-cloud-passport version: 1.5
+databases: []
+maasConfig:
+  credentialsId: "maas"
+  enable: true
+  maasUrl: "http://maas."
+  maasInternalAddress: "http://maas.maas:8888"
+vaultConfig:
+  credentialsId: ""
+  enable: false
+  url: ""
+dbaasConfigs:
+  - credentialsId: "dbaas"
+    enable: true
+    apiUrl: "http://dbaas.dbaas:8888"
+    aggregatorUrl: "https://dbaas."
+consulConfig:
+  tokenSecret: "consul-token"
+  enabled: true
+  publicUrl: "https://consul."
+  internalUrl: "http://consul.consul:8888"
 deployParameters:
   CLOUD_DASHBOARD_URL: "https://dashboard.test-host.managed.tmp.cloud" # cloud passport: test-cloud-passport version: 1.5
   CMDB_URL: "https://test-host.managed.tmp.cloud" # cloud passport: test-cloud-passport version: 1.5
